fixed the out of bound bug

--- a/client/src/app/components/chat-box/chat-box.component.scss
+++ b/client/src/app/components/chat-box/chat-box.component.scss
@@ -51,7 +51,7 @@ div {
     overflow-y: hidden;
     width: 80%;
     padding: 10px;
-    margin: 0 4% 0 4%;
+    margin: 4% 0 4% 0;
     border-radius: 15px;
     background-color: #f8f847;
     color: #ee1919;
